# sysrepo-rs

./: Cargo.toml
.github/workflows/: ci.yaml
assets/yang/: examples@2017-01-19.yang  install-import-test.yang  install-test.yang  sub.yang  test_module.yang
examples/application_changes/: Cargo.toml
examples/application_changes/src/: main.rs
examples/notif_send/: Cargo.toml
examples/notif_send/src/: main.rs
examples/notif_subscribe/: Cargo.toml
examples/notif_subscribe/src/: main.rs
examples/oper_data/: Cargo.toml
examples/oper_data/src/: main.rs
examples/rpc_send/src/: main.rs
examples/rpc_subscribe/src/: main.rs
examples/sr_get_data/: Cargo.toml
examples/sr_get_data/src/: main.rs
examples/sr_get_items/src/: main.rs
examples/sr_set_item/src/: main.rs
examples/utils/: Cargo.toml
examples/utils/src/: lib.rs
src/: common.rs  connection.rs  enums.rs  errors.rs  lib.rs  session.rs  subscription.rs  value.rs  value_slice.rs  values.rs
sysrepo-sys/: Cargo.toml  build.rs  wrapper.h
sysrepo-sys/src/: lib.rs
tests/: connection.rs  session.rs  subscriptions.rs
tests/common/: mod.rs
