[package]
authors = [
  "Toshiaki Takada <toshi@reze.rs>",
  "Valentin Kivachuk Burda <foss@vk496.es>",
]
edition = "2021"
name = "notif_subscribe"
version = "0.3.0"

[dependencies]
sysrepo = {path = "../.."}
sysrepo-sys = { path = "../../sysrepo-sys", version = "0.1.0" }
utils = {path = "../utils"}
