[package]
authors = [
  "Toshiaki Takada <toshi@reze.rs>",
  "Valentin Kivachuk Burda <foss@vk496.es>",
]
edition = "2021"
name = "utils"
version = "0.3.0"

[dependencies]
nix = "0.17.0"
sysrepo = {path = "../.."}
sysrepo-sys = { path = "../../sysrepo-sys", version = "0.1.0" }
yang3 = { path = "../../../yang-rs" }
